tests/negative/contexts/invalid_test_context.orng
// invalid_test_context.orng:9:31: error: test can't request this context
// test "my test" with My_Context {
//                              ^
// 
context My_Context {
    x: Int
}

test "my test" with My_Context {
    .ok
}